--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@astrojs/mdx": "^4.2.3",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
-    "astro": "^5.6.0"
+    "astro": "^5.6.0",
+    "flyff-u-snapshot-comparisons": "file:",
+    "unist-util-visit": "^5.0.0"
   }
 }
