--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.13.11",
     "flyff-u-snapshot-comparisons": "file:",
+    "three": "^0.180.0",
+    "three-stdlib": "^2.36.0",
     "unist-util-visit": "^5.0.0"
   }
 }
